# caribu

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  AUTHORS.txt  CITATION.bib  CITATION.cff  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.TXT  MANIFEST.in  README.rst  README.txt  SConstruct  TODO.txt  appveyor.yml  codemeta.json  dvlpt_requirements.txt  metainfo.ini  options.py  options_conda_win.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  travis.yml
.github/workflows/: conda-package-build.yml
.pkglts/: pkg_cfg.json  pkg_hash.json
conda/: bld.bat  build.sh  conda_build_config.yaml  conda_build_config.yml  environment.yml  meta.yaml  setup.py.patch
db/: uuid
db/revprops/0/: 0
debian/: changelog  control  python-alinea.caribu.preinst  rules
doc/: authors.rst  conf.py  contents.rst  environment.yml  index.rst  installation.rst  readme.rst  usage.rst
doc/install/: install.rst  requirements.rst
doc/notebook/: Raycasting_methods_with_simple_object_python.rst  notebook.rst
doc/references/: caribu_caribu.rst  index.rst
doc/user/: QuickStart.rst  autosum.rst  index.rst  manual.rst
example/: Raycasting_methods_with_simple_object_python.ipynb  multi_spectral.py  test_surface.py
example/assembly_test/: test_light_tutorial.py  test_star.py  test_surface.py
src/EGG-INFO/: PKG-INFO  SOURCES.txt
src/alinea/: __init__.py
src/alinea/caribu/: CaribuScene.py  CaribuScene_nodes.py  GenOutput.py  Periodise.py  __init__.py  __wralea__.py  addSoil.py  caribu.py  caribu_interface.py  caribu_shell.py  caribu_star.py  caributriangleset.py  colormap.py  data_access.py  data_samples.py  deprecated_nodes.py  display.py  file_adaptor.py  label.py  light.py  lightString.py  misc_nodes.py  moved_nodes.py  mtg.py  plantgl_adaptor.py  reader.py  version.py
src/alinea/caribu/data/: Turtle16uoc.light  filter.8  filterT.can  nir.opt  par4.opt  sensor.can  zenith.light
src/alinea/caribu/sky_tools/: GenSky.py  Genlight.py  Gensun.py  Sky.py  Sun.py  add_sun.py  get_meteo_dat.py  group_seq.py  merge2skies.py  mergeNskies.py  place_sun.py  read_meteo_file.py  spitters_horaire.py  sunDome.py  turtle.py
src/alinea/caribu/visualisation/: colorScale.py  display.py  gammaTrans.py  py_canview.py  saveImage.py
src/alinea/caribu_wralea/: __wralea__.py
src/alinea/caribu_wralea/data/: Meteo2006.csv  Rg_2J.csv  Turtle16soc.light  Turtle16uoc.light  Turtle46soc.light  Turtle46uoc.light  __wralea__.py
src/alinea/caribu_wralea/demos/: __wralea__.py
src/alinea/caribu_wralea/deprecated/: __wralea__.py
src/alinea/caribu_wralea/sky_tools/: __wralea__.py
src/alinea/caribu_wralea/visualisation/: __wralea__.py
src/alinea/caribu_wralea/workflow/: __wralea__.py
src/caribu/: Canestra.py  CaribuScene.py  CaribuScene_functional.py  CaribuScene_nodes.py  PARaggregators.py  Periodise.py  S2v.py  WriteCan.py  __wralea__.py  addSoil.py  caribu.py  caribu_star.py  exposition.py  interface.py  label.py  lightString.py  mtg.py  selectOutput.py  vcaribuOut_adaptor.py  vcaribu_adaptor.py
src/caribu/data/: Turtle16soc.light  Turtle46soc.light  Turtle46uoc.light  __wralea__.py  zenith.light
src/caribu/sky_tools/: Gensun.py  Sky.py  Sun.py  __wralea__.py  spitters_horaire.py  turtle.py
src/caribu/visualisation/: __wralea__.py  colorScale.py  display.py  gammaTrans.py  saveImage.py
src/cpp/Canestra/src/: CMakeLists.txt  actop.cpp  beep.cpp  bsp.cpp  bzh.cpp  canestra2py.cpp  canopy_E.cpp  canopy_io.cpp  capteur.cpp  capteur.h  diffuseur.cpp  envoi.cpp  ff.cpp  ff.h  image.h  infini.cpp  infini.h  lumiere.cpp  lumiere.h  pavage.cpp  radioxity.cpp  solver.cpp  solver.h  va_test.cpp  visu3d.cpp  voxel.cpp
src/cpp/Periodise/: plop.can
src/cpp/Periodise/Test/: bac1.can  bac4.can  bac516ss.can  motif.can  test.can  test.csh
src/cpp/Periodise/src/: CMakeLists.txt  GetOpt.cpp  GetOpt.h  Mmath.h  T_geometrie.cpp  T_geometrie.h  T_utilitaires.h  Tch.cpp  actop.cpp  actop.h  arbo.h  bool.h  canopyL.cpp  canopyL.h  diffuseur.cpp  diffuseur.h  main.cpp  outils.cpp  outils.h  periodise.cpp  periodise2py.cpp  primitive.cpp  primitive.h  soil.h
src/cpp/bibliotek/: CMakeLists.txt  GetOpt.cpp  T_geometrie.cpp  arbo.c  chrono.cpp  decodeclef.cpp  ferrlog.cpp  getallfilename.cpp  label2index.c  matrix.c  outils.cpp  parse_geometry.cpp  primitive.cpp  runcommand.cpp  utils.c  writepng.c
src/cpp/include/: Mmath.h  T_geometrie.h  T_utilitaires.h  actop.h  bool.h  bsp.h  bzh.h  canopy.h  cantools.h  chrono.h  comm_lib.h  debug.h  diffuseur.h  ferrlog.h  matrix.h  outils.h  parse_geometry.h  primitive.h  system.h  transf.h  utils.h  verbose.h  voxel.h
src/cpp/mc-sail/src/: CMakeLists.txt  bool.h  msail.cpp  multicou.cpp  multicou.h  profil.cpp
src/cpp/meschach/mesch12a/include/: err.h
src/cpp/meschach/mesch12a/src/: CMakeLists.txt  bdfactor.c  bkpfacto.c  conjgrad.c  dmacheps.c  extras.c  fmacheps.c  init.c  iter0.c  itersym.c  ivecop.c  lufactor.c  machine.c  matlab.c  matrixio.c  maxint.c  memory.c  memstat.c  mfunc.c  norm.c  otherio.c  qrfactor.c  sparse.c  sparseio.c  spchfctr.c  sprow.c  spswap.c  submat.c  tutadv.c  tutorial.c  vecop.c
src/cpp/meschach/mesch12a/src/Archie/: zmachine.c
src/cpp/meschach/mesch12a_v0/include/: err.h  iter.h  machine.h  matlab.h  matrix.h  meminfo.h  sparse.h  zmatrix.h
src/cpp/meschach/mesch12a_v0/src/: bdfactor.c  bkpfacto.c  chfactor.c  copy.c  err.c  fft.c  givens.c  hessen.c  hsehldr.c  init.c  iter0.c  iternsym.c  itersym.c  ivecop.c  lufactor.c  machine.c  (+42 more)
src/cpp/s2v/src/: CMakeLists.txt  bool.h  envoi.c  main.cpp  s2v.cpp  s2v2py.cpp
test/: test_CaribuScene.py  test_caribu.py  test_caribu_sensors.py  test_caribu_shell.py  test_caribu_soilmesh.py  test_caribuscene.py  test_dataflow.py  test_domain.py  test_exposition.py  test_file_adaptor.py  test_flip_triangle.py  test_light.py  test_light_tutorial.py  test_material.py  test_multi_band.py  test_null_triangle.py  test_plantgl_adaptor.py  test_reader.py  test_simple_triangle.py  test_star.py  test_surface.py  test_triangle_faces.py  tools.py
(+9 files in other folders)
