[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"


[project]
name = "alinea.caribu"
description = "Python/Visualea interface to Caribu Light model."
readme = "README.rst"
license.file = "INRA_License_agreement"
authors = [
  { name = "My Name", email = "me@email.com" },
]
maintainers = [
  { name = "INRAE", email = "christian.fournier@inrae.fr" },
  { name = "INRAE", email = "michael.chelle@inrae.fr" },
  { name = "CIRAD", email = "christophe.pradal@cirad.fr" },
]
requires-python = ">=3.8"

dependencies = [
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Biology",
]

[project.urls]
Homepage = "https://github.com/openalea/caribu"
Documentation = "https://caribu.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/caribu/issues"
Discussions = "https://github.com/openalea/caribu/discussions"
Changelog = "https://caribu.readthedocs.io/en/latest/changelog.html"
