[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "alinea.caribu"
authors = [
  { name = "Christian Fournier"},
  { name = "Michaël Chelle"},
  { name = "Christophe Pradal"},
]
description = "Eco-physiological model of light interception by plants"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["openalea", "FSPM", "light"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: CeCILL-C License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
version = "8.1.4"
dynamic = ["readme"]
dependencies = [
  "path"
]

[project.optional-dependencies]
test = ["pytest"]
doc = [
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "nbsphinx",
]

[project.urls]
Homepage = "https://openalea.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea-incubator/caribu/issues"
Discussions = "https://github.com/openalea-incubator/caribu/discussions"
Changelog = "https://github.com/openalea-incubator/caribu/releases"

[project.entry-points."wralea"]
"alinea.caribu" = "alinea.caribu_wralea"

[tool.scikit-build]
build-dir="./build/{wheel_tag}"
sdist.include = ["*canestrad*","*mc-sail*","*s2v*","*periodise*"]
logging.level = "INFO"
build.verbose = true

[tool.scikit-build.cmake]
build-type="Release"
source-dir="."
args=["-DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX -DCMAKE_PREFIX_PATH=$CONDA_PREFIX -j"]

[tool.scikit-build.wheel]
packages = ["src/alinea"]
